# atelier

./: .arcconfig  .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  CONTRIBUTING.md  Messages.sh  README.md  atelierui.rc  config.h.cmake  connectsettings.h  connectsettings.ui  leftwidget.cpp  leftwidget.h  main.cpp  mainwindow.h  mainwindow.ui  toolbarwidget.cpp  toolbarwidget.h
cmake/: FindQwt6.cmake
deploy/: CMakeLists.txt  atelier.menu  atelierui.rc  org.kde.atelier.appdata.xml  org.kde.atelier.desktop
po/ar/: atelier.po
po/ca/: atelier.po
po/ca@valencia/: atelier.po
po/cs/: atelier.po
po/da/: atelier.po
po/de/: atelier.po
po/el/: atelier.po
po/en_GB/: atelier.po
po/eo/: atelier.po
po/es/: atelier.po
po/et/: atelier.po
po/eu/: atelier.po
po/fi/: atelier.po
po/fr/: atelier.po
po/ga/: atelier.po
po/gl/: atelier.po
po/he/: atelier.po
po/ia/: atelier.po
po/it/: atelier.po
po/ja/: atelier.po
po/ka/: atelier.po
po/ko/: atelier.po
po/lt/: atelier.po
po/nl/: atelier.po
po/nn/: atelier.po
po/pl/: atelier.po
po/pt/: atelier.po
po/pt_BR/: atelier.po
po/ru/: atelier.po
po/sk/: atelier.po
po/sl/: atelier.po
po/sv/: atelier.po
po/tr/: atelier.po
po/ug/: atelier.po
po/uk/: atelier.po
po/zh_CN/: atelier.po
po/zh_TW/: atelier.po
scripts/: pre-commit.style
src/: CMakeLists.txt  atelier.cpp  atelier.h  atelier.icns  atelierui.rc  connectsettings.cpp  gcodeeditor.cpp  gcodeeditorwidget.cpp  gcodeeditorwidget.ui  leftwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  toolbarwidget.cpp  toolbarwidget.h
src/dialogs/: CMakeLists.txt  choosefiledialog.cpp  choosefiledialog.h  connectsettingsdialog.cpp  connectsettingsdialog.h  connectsettingsdialog.ui  generalsettingsdialog.cpp  generalsettingsdialog.h  generalsettingsdialog.ui  logdialog.cpp  logdialog.h  profilesdialog.cpp  profilesdialog.h  profilesdialog.ui
src/widgets/: CMakeLists.txt  atcoreinstancewidget.cpp  atcoreinstancewidget.h  atcoreinstancewidget.ui  axiscontrol.cpp  bedextruderwidget.cpp  bedextruderwidget.h  bedextruderwidget.ui  connectsettingswidget.cpp  connectsettingswidget.h  gcodeeditorwidget.cpp  gcodeeditorwidget.h  gcodeeditorwidget.ui  leftwidget.cpp  logwidget.cpp  logwidget.h  plotwidget.cpp  printerhostpositionvisualcontroller.cpp  printerhostpositionvisualcontroller.h  printprogresswidget.cpp  printprogresswidget.h  pushgcodewidget.cpp  pushgcodewidget.h  qcgaugewidget.cpp  qcgaugewidget.h  ratescontrolwidget.cpp  ratescontrolwidget.h  ratescontrolwidget.ui  temporaryprintercontrolwidget.cpp  temporaryprintercontrolwidget.h  temporaryprintercontrolwidget.ui  thermowidget.cpp  thermowidget.h  toolbarwidget.cpp  toolbarwidget.h  videomonitorwidget.cpp  videomonitorwidget.h  welcomewidget.cpp  welcomewidget.h
src/widgets/3dview/: AnimatedEntity.qml  CMakeLists.txt  SceneEntity.qml  Viewer3d.qml  axisgnomon.gltf  axisgnomon.vert  axisgnomonentity.cpp  axisgnomonentity.h  bedproperties.cpp  bedproperties.h  cameracontroller.cpp  cameracontroller.h  fileloader.cpp  fileloader.h  gcodeto4d.cpp  gcodeto4d.h  gridmesh.cpp  gridmesh.h  linemesh.cpp  linemesh.h  linemeshgeometry.cpp  linemeshgeometry.h  viewer3d.cpp  viewer3d.h  viewer3d.qml  viewer3d.qrc
